add new function map in js

--- a/css/block/_all.css
+++ b/css/block/_all.css
@@ -7,3 +7,4 @@
 @import url("./_about.css");
 @import url("./_footer-contact.css");
 @import url("./_footer-last.css");
+@import url("./popup-cart.css");
